# play-riz

device-monitor/: CMakeLists.txt  DYNAMIC_USER_MANAGEMENT.md  README.md  SSL_README.md  build.sh  config.example.json  config_ssl.example.json  config_ssl_test.json  generate_ssl_certs.sh  manage_users.sh  mosquitto_acl  mosquitto_auth.conf  mosquitto_passwd  mosquitto_ssl.conf  start_auth_broker.sh  start_demo.sh  start_ssl_broker.sh  test_ssl.cpp  test_ssl_simple.cpp
device-monitor/certs/: ca.crt  ca.key  client.crt  client.key  server.crt  server.key
device-monitor/examples/: ssl_example.cpp
device-monitor/include/: device.h  mqtt_client.h  server.h
device-monitor/scripts/: generate_ssl_certs.sh
device-monitor/src/: device.cpp  device_main.cpp  mqtt_client.cpp  server.cpp  server_main.cpp
ocr/: Makefile  README.md  create_chinese_test.py  create_test_image.py  ocr_cli.py  requirements.txt  setup.py
python-flask/: README.md  auth.py  database_diagram.md  db_inspector.py  main.py  models.py  requirements.txt
python-flask/instance/: app.db
python-flask/ssl/: cert.pem  key.pem
rtos/: CONTEXT_SWITCH_VERSIONS.md  Makefile  README.md  simple_rtos.ld  stm32f303cct6.ld
rtos/include/: rtos.h  stm32f103.h  stm32f303.h
rtos/src/: context_switch.c  context_switch.s.bak  gpio.c  main.c  rtos.c  scheduler.c  semaphore.c  startup.c  stm32f103.c  systick.c  task.c  uart.c
